--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,19 +33,24 @@ jobs:
         with:
           distribution: 'zulu' 
           java-version: '11'
-      - name: Test for ${{ matrix.pact_provider }}
+      - name: Running pact tests
         run: make test
         env:
           PACT_PROVIDER: ${{ matrix.pact_provider }}
+
+  publish-pacts:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v2
+      - run: docker pull pactfoundation/pact-cli:latest
       - name: Publish pacts
         run: GIT_BRANCH=${GIT_REF:11} make publish_pacts
-        env:
-          PACT_PROVIDER: ${{ matrix.pact_provider }}
-
+    
   # Runs on branches as well, so we know the status of our PRs
   can-i-deploy:
     runs-on: ubuntu-latest
-    needs: test
+    needs: publish-pacts
     steps:
       - uses: actions/checkout@v2
       - run: docker pull pactfoundation/pact-cli:latest
